# Japanese_Character_Name_Dictionary

./: .gitignore  README.md  agents.md  agents_read_me.md  anilist_characters-1.jsonl  contributing.md  log_stats.py
.github/: FUNDING.yml
.github/workflows/: docker-publish.yml  test.yml
docs/: agents.md  agents_read_me.md  how_caching_works.md
docs/plans/: cache_images.md  honorific_design.md  media_cache_extension.md  media_cache_plan.md  plan.md
yomitan-dict-builder/: .dockerignore  Cargo.toml  Dockerfile  build.rs  myanimelist.md
yomitan-dict-builder/src/: anilist_client.rs  anilist_name_test_data.rs  content_builder.rs  dict_builder.rs  disk_cache.rs  image_cache.rs  image_handler.rs  kana.rs  main.rs  media_cache.rs  models.rs  name_parser.rs  vndb_client.rs
yomitan-dict-builder/static/: app.js  index.html
yomitan-dict-builder/static/custom/: app.js  index.html  style.css
yomitan-dict-builder/tests/: integration_tests.rs
