[package]
name = "yomitan-dict-builder"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
zip = { version = "2", default-features = false, features = ["deflate", "time"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
rand = "0.8"
regex = "1"
uuid = { version = "1", features = ["v4"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
futures = "0.3"

rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2"
chrono = "0.4"
tower_governor = { version = "0.4", features = ["axum", "tracing"] }
[dev-dependencies]
tempfile = "3"

# Release: optimize for speed, strip debug info, single codegen unit
# for better inlining (especially image processing hot paths).
[profile.release]
opt-level = 3
lto = "fat"
strip = true
codegen-units = 1
